added controller functions, rendered routes on erb files, the project is coming to picture

--- a/app/views/posts/view.erb
+++ b/app/views/posts/view.erb
@@ -1,1 +1,9 @@
+this is the forumn page that just displays the forumn it
+does not let you comment without the pressing on the href link to reply
+which directs you to the comment/new route
 
+<%=@post.comments%>
+<a href="/comments/new">Comment</a>
+likes
+dislikes
+<a href="/users/home">Back</a>
