--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <form method="POST" action=""><input type="text" name="user_input" value="Search Peeker"></form>
     <meta charset="utf-8">
     <title>peeker</title>
   </head>
