--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,6 +1,6 @@
 create a new post page
 
-<h2> Create Your New forum</h2>
+<h2> Create Your New Post</h2>
 
 <form method="POST" action="/posts/new">
 <p>Name of Forum: <input name="post[name]" type="text">
