--- a/app/views/posts/view.erb
+++ b/app/views/posts/view.erb
@@ -4,8 +4,14 @@ which directs you to the comment/new route
 <br></br>
 <%=@post.content%>
 <a href="/comments/new">Comment</a>
+
 <br></br>
-<a href="/posts/<%=@post.id%>/new_like">Like :) </a><%=@post.likes%>
+
+
+<a href="/posts/<%=@post.id%>/new_like"> Like :) </a> <%=@post.likes%>
+<% if @post.user_id == @post.user.id %>
+<%end%>
+
 <br></br>
 <a href="/posts/<%=@post.id%>/new_dislike">Dislike :( </a><%=@post.dislikes%>
 <br></br>
