--- a/app/views/locations/forums.erb
+++ b/app/views/locations/forums.erb
@@ -4,4 +4,4 @@ Here is the location forum! Checkout the Posts!
 <a href="/posts/<%=post.id%>/view"><%=post.name%></a>
 <br></br>
 <%end%>
-<a href="/posts/new">Create A New Post</a>
+<a href="/posts/<%=@locations.city%>/<%=false%>/new">Create A New Post</a>
