--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -19,4 +19,4 @@ menu drag down button.
 <a href="/posts/<%=post.id%>/view"><%=post.name%></a>
 <%end%>
 
-<a href="/posts/<%=@user.zip_location%>/new">Create new Post</a>
+<a href="/posts/<%=@user.zip_location%>/<%=true%>/new">Create new Post</a>
