added controller action for post to be found and rendered

--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -16,7 +16,8 @@ menu drag down button.
 
 
 <%@user.posts.each do |post|%>
-<a href="/posts/<%=post.id%>/view"><%=post.name%></a>
+<a href="/posts/<%=post.id%>/forum/new"><%=post.name%></a>
 <%end%>
 
-<a href="/posts/<%=@user.zip_location%>/<%=true%>/new">Create new Post</a>
+<a href="/posts/<%=@user.zip_location%>/home/new">Create new Post</a>
+<%binding.pry%>
