--- a/app/views/comments/new.erb
+++ b/app/views/comments/new.erb
@@ -1,6 +1,6 @@
 <h2>Join this Forum!</h2>
 <form method="POST" action="/comments/<%=@post.id%>/new">
-<input type="text" name="post[comment][]">
+<input type="text" name="comment[content]">
 This is the reply box for a forumn. the actual forumn will be held here
 <button type="submit" name="submit">Comment</button>
 
