--- a/app/views/locations/forums.erb
+++ b/app/views/locations/forums.erb
@@ -1,7 +1,8 @@
 Here is the location forum! Checkout the Posts!
 
-<%@locations.forums.each do |post|%>
+<%@location.posts.each do |post|%>
 <a href="/posts/<%=post.id%>/view"><%=post.name%></a>
 <br></br>
 <%end%>
-<a href="/posts/<%=@locations.city%>/<%=false%>/new">Create A New Post</a>
+
+<a href="/posts/<%=@location.city%>/location">Create A New Post</a>
