added the update user info function with naveed

--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -1,6 +1,7 @@
 
 <form method="POST" action="/locations/view_forums"><input type="text" name="user_input" value="Search Peek"></form>
 <a href="/users/logout">Log Out</a>
+<a href="/users/update_profile">Profile</a>
 
 
 
