--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -18,6 +18,12 @@ menu drag down button.
 <%@user.posts.each do |post|%>
 <a href="/posts/<%=post.id%>/view"><%=post.name%></a>
 <%end%>
+<br>
+Current location posts: <%= @current_location.city%>
+<br>
+<%@current_location_posts.each do |post|%>
+<a href="/posts/<%=post.id%>/view"><%=post.name%></a>
+<%end%>
 
 
 <a href="/posts/new">Create new Post</a>
