--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -3,8 +3,8 @@ create a new post page
 
 <form method="POST" action="/posts/<%=@inputed_location.city%>/new">
 
-<p>Name your creppy post: <input name="post[name]" type="text">
-  <p>Create your creepy content: <input name="post[content]" type="text">
+<p>Name your post: <input name="post[name]" type="text">
+  <p>Fill in your content: <input name="post[content]" type="text">
 <br><br>
 
 
