--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -12,17 +12,15 @@ menu drag down button.
 
 
 
-
-
-
 <%@user.posts.each do |post|%>
 <a href="/posts/<%=post.id%>/view"><%=post.name%></a>
 <%end%>
 <br>
+
 Current Location : <%= @current_location.city%>
-                   
+
 <br>
-<%@current_location_posts.each do |post|%>
+<%@current_location.posts.each do |post|%>
 <a href="/posts/<%=post.id%>/view"><%=post.name%></a>
 <%end%>
 
