Can now edit and delete your posts

--- a/app/views/posts/view.erb
+++ b/app/views/posts/view.erb
@@ -32,6 +32,12 @@ which directs you to the comment/new route
 <a href="/comments/<%=@post.id%>/new">Comment</a>
 <br></br>
 
+<%@user = User.find_by(id: session[:id])%>
+<% if @post.user_id == @user.id%>
+<a href="/posts/<%=@post.id%>/edit">Edit Post</a>
+<a href="/posts/<%=@post.id%>/delete">Delete Post</a>
+<%end%>
+
 
 <br></br>
 <a href="/users/home">Back</a>
