--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,13 +1,29 @@
+<! DOCTYPE html>
+<html>
+<head>
+	 <link href="/stylesheets/front.css" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
+</head>
 
-<h1>Peek</h1>
+<section>
+  <div class='banner'>
+  <div class='head'>
+
+    <!--<p>How'd you doing?</p>-->
+  </div>
+   
+ <!--  <h2>Peek</h2> -->
+  </div>
+</section>
+
 <h3>Peek Your Mind</h3>
 <br></br>
 
-  <h4>Im back to Peek:</h4>
+  <p class="index_login">I'm back to Peek</p>
 
-  <a href="/users/login">Log In</a>
+	<a href="/users/login" class="login-button">Log In</a>
 
 <br></br>
 
-  <h4>I want to start peeking</h4>
-  <a href="/users/signup">Sign Up</a>
+  <p class="index_login">I want to start peeking</p>
+  	<a href="/users/signup" class="login-button">Sign Up</a>
