--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,24 @@
-<h2>Welcome back you creep</h2>
+<! DOCTYPE html>
+<html>
+<head>
+	 <link href="/stylesheets/front.css" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
+</head>
+
+<section>
+  <div class='banner'>
+  <div class='head'>
+
+    <!--<p>How'd you doing?</p>-->
+  </div>
+   
+  <h2>Peek</h2>
+  </div>
+</section> 
+<h3>Welcome back you creep</h3>
 
 <form method=POST action="/users/login">
-  <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="password" name="password_digest"></p>
-  <p><button type="submit">Sign In</button></p>
+  <p class="signup_field"><input type="text" name="email" placeholder="Email"></p>
+  <p class="signup_field"><input type="password" name="password_digest" placeholder="Password"></p>
+  	<a href="/users/login" class="login-button">Log In</a>
 </form>
