updated css files

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -20,5 +20,5 @@
 <form method=POST action="/users/login">
   <p class="signup_field"><input type="text" name="email" placeholder="Email"></p>
   <p class="signup_field"><input type="password" name="password_digest" placeholder="Password"></p>
-  	<a href="/users/login" class="login-button">Log In</a>
+  	<a href="/users/home" class="login-button">Log In</a>
 </form>
