--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,8 +1,24 @@
-<h1>Enter your details below:</h1>
+<! DOCTYPE html>
+<html>
+<head>
+	 <link href="/stylesheets/front.css" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
+</head>
 
-<form method=POST action="/users/signup">
-  <p>Name: <input type="text" name="name"></p>
-  <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="password" name="password_digest"></p>
-  <p><button type="submit">Sign Up</button></p>
+<section>
+  <div class='banner'>
+  <div class='head'>
+
+    <!--<p>How'd you doing?</p>-->
+  </div>
+   
+  <h2>Peek</h2>
+  </div>
+</section> <h1>I'm ready to Peek:</h1>
+
+<form method=POST action="/users/login">
+  <p class="signup_field"><input type="text" name="name" placeholder="Username"></p>
+  <p class="signup_field"><input type="text" name="email" placeholder="Email"></p>
+  <p class="signup_field"><input type="password" name="password_digest" placeholder="Password"></p>
+  	<a href="/users/login" class="login-button">Log In</a>
 </form>
