--- a/public/stylesheets/front.css
+++ b/public/stylesheets/front.css
@@ -152,7 +152,8 @@ a.login-button {
   border-radius: 9px;
   font-weight: 900;
   letter-spacing: 2px;
-  margin-left: 600px;
+  margin: 600px;
+  text-align: center;
 }
 
 a:hover { 
@@ -166,7 +167,12 @@ form {
     text-align: center;
 }
 
-p.signup_field {
-  text-align: center;
-  font-size: 60px;
+input {
+    background-color: white;
+    cursor: auto;
+    padding: 0px;
+    border-width: 2px;
+    width: 200px;
+    height: 30px;
+    font-size: 20px;
 }
