--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,5 +1,9 @@
 <h1>Enter your details below:</h1>
 
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <form method=POST action="/users/signup">
   <p>Name: <input type="text" name="name"></p>
   <p>Email: <input type="text" name="email"></p>
