working on flash messages

--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -3,6 +3,9 @@
 <a href="/users/logout">Log Out</a>
 <a href="/users/update_profile">Profile</a>
 
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
 
 
 This is the users homepage
