updated css files

--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -1,4 +1,23 @@
-
+<! DOCTYPE html>
+<html>
+<head>
+	 <link href="/stylesheets/post.css" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
+</head>
+<nav>  
+  <ul>
+    <li>Blah /</li>
+    <li>Bla /</li>
+    <li>Bl /</li>
+  </ul>  
+</nav>
+<div id="menu">
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>  
+</div>
 <h2> Edit Your Post</h2>
 
 <form method="POST" action="/posts/<%=@post.id%>/edit">
