the update profile page is stylized

--- a/app/views/users/update.erb
+++ b/app/views/users/update.erb
@@ -1,7 +1,21 @@
-Update your profile!
+<div id="content">
+  <div id="login_form">
+<br></br>
+<h2 class="update_h2">Update your profile</h2>
+<br></br>
+
 <form method="POST" action="/users/updated">
-Name: <input type="text" name="name">
-Email: <input type="text" name="email">
-Password: <input type="password" name="password_digest">
-<button type="submit">Submit</button>
+<input type="text" name="name" placeholder="Name">
+<br></br>
+
+<input type="text" name="email" placeholder="Email">
+<br></br>
+
+<input type="password" name="password_digest" placeholder="Password">
+<br></br>
+
+
+<button type="submit" value="submit">Edit Profile</button>
 </form>
+</div>
+</div>
