--- a/app/views/users/update.erb
+++ b/app/views/users/update.erb
@@ -15,7 +15,7 @@
 <br></br>
 
 
-<button type="submit" value="submit">Edit Profile</button>
+<a href="/users/updated" class="login-button">Edit Profile</a>
 </form>
 </div>
 </div>
