working on routes again

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+
 <html>
 <head>
 	 <!-- <link href="/stylesheets/front.css" rel="stylesheet">
@@ -7,7 +7,7 @@
 <!--
 <!-- <section>
   <div class='banner'>
-  <div class='head'> --> -->
+  <div class='head'> -->
 
     <!--<p>How'd you doing?</p>-->
   <!-- </div> -->
