--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -18,5 +18,5 @@
   <p><input type="text" name="email" placeholder="Email"></p>
   <p><input type="password" name="password_digest" placeholder="Password"></p>
 	<br></br>
-  <p><a herf="/users/signup" class="login-button">Sign Up</a></p>
+  <a href="/users/signup" class="login-button">Sign Up</a>
 </form>
