--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-
-    
+<head>
+	<link href="/stylesheets/layout.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
     <meta charset="utf-8">
     <title>peeker</title>
-  </head>
-  <body>
+</head>
+<body>
+  <div class='banner'>
+  <div class='head'>
+    <!--<p>How'd you doing?</p>-->
+  </div>
+    
+  <h1>Peek</h1>
+  </div>
+  
     <%= yield %>
-  </body>
+</body>
 </html>
