--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,31 +1,24 @@
-<<<<<<< HEAD
+
 <! DOCTYPE html>
 <html>
 <head>
-	 <link href="/stylesheets/front.css" rel="stylesheet">
+	 <link href="/stylesheets/layout.css" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 
-<section>
-  <div class='banner'>
-  <div class='head'>
+<body>
+  <div class="container">
+  <form class="form-signin">
+    <h2 class="form-signin-heading">Welcome back you creep</h2>
+    <% if flash.has?(:message) %>
+    <%= flash[:message] %>
+    <% end %>
+    <form method=POST action="/users/login">
+    <p class="form-control"><input type="text" name="email" placeholder="Email" required></p>
+    <p class="form-control"><input type="password" name="password_digest" placeholder="Password"></p>
+    <a href="/users/home" class="login-button">Log In</a>
+  </form>
+</body>
 
-    <!--<p>How'd you doing?</p>-->
-  </div>
-   
-  <h2>Peek</h2>
-  </div>
-</section> 
-<h3>Welcome back you creep</h3>
-=======
-<h2>Welcome back you creep</h2>
-<% if flash.has?(:message) %>
-  <%= flash[:message] %>
-<% end %>
->>>>>>> 07be5b7a015101c812b2cf694a9ae6f5b7e2fd7b
 
-<form method=POST action="/users/login">
-  <p class="signup_field"><input type="text" name="email" placeholder="Email"></p>
-  <p class="signup_field"><input type="password" name="password_digest" placeholder="Password"></p>
-  	<a href="/users/home" class="login-button">Log In</a>
-</form>
+
