finished styling create page

--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,10 +1,12 @@
-
-<h2> Create Your New Post</h2>
+<br></br>
+<h2 class="update_h2"> Create A New Post!</h2>
+<br></br>
 
 <form method="POST" action="/posts/<%=@location.city%>/new">
 
-<p>Name your post: <input name="post[name]" type="text">
-  <p>Fill in your content: <input name="post[content]" type="text">
+ <input name="post[name]" type="text" placeholder="Name">
+ <br></br>
+<input name="post[content]" type="text" placeholder="Content">
 <br><br>
 
 
