--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,28 +1,11 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
 <head>
-	<link href="/stylesheets/layout.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
-    <meta charset="utf-8">
-    <title>peeker</title>
-</head>
-<body>
-  <div class='banner'>
-  <div class='head'>
-    <!--<p>How'd you doing?</p>-->
-  </div>
-    
-  <h1>Peek</h1>
-  </div>
-  
-=======
-  <head>
-    <link href="/stylesheets/front.css" rel="stylesheet">
- 	 <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
+  <link href="/stylesheets/front.css" rel="stylesheet">
+ 	<link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 
     <meta charset="utf-8">
-    <title>peeker</title>
+    <title>Peek</title>
   </head>
   <body>
 
@@ -32,7 +15,6 @@
         <h2>Peek</h2>
       </div>
 
->>>>>>> 3e2e7ed5514459d7c6e6088880930fb88e38882b
     <%= yield %>
 </body>
 </html>
