--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
 <head>
 	 <link href="/stylesheets/front.css" rel="stylesheet">
@@ -8,7 +8,6 @@
 </section> <h2 class="update_h2">I'm ready to Peek!</h2>
 <br></br>
 
-<<<<<<< HEAD
 <section>
   <div class='banner'>
   <div class='head'>
@@ -26,9 +25,7 @@
   <p class="signup_field"><input type="password" name="password_digest" placeholder="Password"></p>
   	<a href="/users/login" class="login-button">Log In</a>
 </form>
-=======
 
->>>>>>> 3e2e7ed5514459d7c6e6088880930fb88e38882b
 <% if flash.has?(:message) %>
   <%= flash[:message] %>
 <% end %>
@@ -40,7 +37,4 @@
 	<br></br>
   <button type="submit" value="submit">Sign Up</button>
 </form>
-<<<<<<< HEAD
 
-=======
->>>>>>> 3e2e7ed5514459d7c6e6088880930fb88e38882b
