working on homepage

--- a/app/views/posts/view.erb
+++ b/app/views/posts/view.erb
@@ -1,6 +1,4 @@
-this is the forumn page that just displays the forumn it
-does not let you comment without the pressing on the href link to reply
-which directs you to the comment/new route
+
 <%Like.all.each do |current_like| %>
 <% if current_like.posts.include?(@post) %>
 <% @like = current_like %>
@@ -13,29 +11,23 @@ which directs you to the comment/new route
   <%end%>
 <%end%>
 
+<%=@post.name%>
+<br></br>
+<%=@post.content%>
+<%@post.comments.each do |comment|%>
+<%=comment.content%>
+<%end%>
 
 
 <br></br>
-<%=@post.content%>
 
 <a href="/comments/new">Comment</a>
 
 <br></br>
 
 
-<a href="/posts/<%=@post.id%>/new_like"> Like :)</a> <%=@post.likes%>
+<a href="/posts/<%=@post.id%>/new_like"> Like :)</a> <%=@like.users.length%>
 
-
-<br><br>
-
-<%@post.comments.each do |comment|%>
-<%=comment.content%>
-<%end%>
-<a href="/posts/<%=@post.id%>/new_like">Like</a>:)<%=@like.users.length%>
-
-
-
-<br></br>
 <a href="/posts/<%=@post.id%>/new_dislike">Dislike</a><%=@dislike.users.length%>
 
 <a href="/comments/<%=@post.id%>/new">Comment</a>
@@ -45,6 +37,9 @@ which directs you to the comment/new route
 <%@user = User.find_by(id: session[:id])%>
 <% if @post.user_id == @user.id%>
 <a href="/posts/<%=@post.id%>/edit">Edit Post</a>
+
+
+<br></br>
 <a href="/posts/<%=@post.id%>/delete">Delete Post</a>
 <%end%>
 
