--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,19 +1,13 @@
+<html>
 
-<h1>Peek</h1>
-<h3>Peek Your Mind</h3>
-<br></br>
+ <p class="index_login">I'm back to Peek</p>
 
-<% if flash.has?(:message) %>
-  <%= flash[:message] %>
-<% end %>
-
-  <h4>Im back to Peek:</h4>
-
-  <a href="/users/login">Log In</a>
+  <a href="/users/login" class="login-button">Log In</a>
 
 
 
 <br></br>
 
-  <h4>I want to start peeking</h4>
-  <a href="/users/signup">Sign Up</a>
+ <p class="index_login">I want to start peeking</p>
+     <a href="/users/signup" class="login-button">Sign Up</a>
+ </html>
