--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,24 @@
-<h2>Welcome back you creep</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	 <link href="/stylesheets/front.css" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
+
+
+		<br></br>
+<h2 class="update_h2">Welcome Back You Creep!</h2>
+</br>
+
 <% if flash.has?(:message) %>
   <%= flash[:message] %>
 <% end %>
 
+
 <form method=POST action="/users/login">
-  <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="password" name="password_digest"></p>
-  <p><button type="submit">Sign In</button></p>
+  <p class="signup_field"><input type="text" name="email" placeholder="Email">
+		</br>
+  <p class="signup_field"><input type="password" name="password_digest" placeholder="Password">
+	<br></br>
+  	<a href="/users/home" class="login-button">Log In</a>
+
 </form>
